<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/ghostwhite"
    android:orientation="vertical">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/activity_login_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:transitionName="@string/transition_login"
        app:backgroundTint="@color/colorAccent"
        app:elevation="0dp"
        app:fabSize="normal"
        app:pressedTranslationZ="8dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/login_cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:tag="@string/transition_login"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/ghostwhite"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:id="@+id/closetxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:drawableRight="@drawable/icclearblack24dp"
                android:drawableTint="@color/android_hint_colour"
                android:tag="@string/transition_close"
                android:transitionName="@string/transition_close" />

            <TextView
                android:id="@+id/emailtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="30dp"
                android:tag="@string/emailtxt"
                android:text="E-MAIL"
                android:textColor="@android:color/black"
                android:transitionName="@string/emailtxt" />

            <EditText
                android:id="@+id/emailEdittxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="5dp"
                android:hint="Enter your E-mail"
                android:paddingBottom="20dp"
                android:tag="@string/email_edittxt"
                android:textColor="@android:color/black"
                android:textColorHint="@color/editText"
                android:transitionName="@string/email_edittxt" />

            <TextView
                android:id="@+id/passtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="30dp"
                android:tag="@string/passwordtxt"
                android:text="PASSWORD"
                android:textColor="@android:color/black"
                android:transitionName="@string/passwordtxt" />

            <EditText
                android:id="@+id/passEdittxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="5dp"
                android:hint="********"
                android:inputType="numberPassword"
                android:paddingBottom="20dp"
                android:tag="@string/passwoed_edittxt"
                android:textColor="@android:color/black"
                android:textColorHint="@color/editText"
                android:transitionName="@string/passwoed_edittxt" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/login_btn"
                android:tag="@string/transition_login"
                android:text="LOG IN"
                android:textColor="#ffffff"
                android:textSize="20dp" />

            <Button
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/signup_btn"
                android:tag="@string/transition_signup"
                android:text="SIGN UP"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:transitionName="@string/transition_signup" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>